Re-organize repo

--- a/examples/vr_basic.html
+++ b/examples/vr_basic.html
@@ -48,8 +48,8 @@
     </style>
   </head>
   <body>
-    <script src="../lib/three.min.js" type="text/javascript"></script>
-    <script src="../lib/CSS3DRenderer.js" type="text/javascript"></script>
+    <script src="./lib/three.min.js" type="text/javascript"></script>
+    <script src="./lib/CSS3DRenderer.js" type="text/javascript"></script>
 
     <script src="../js/DeviceOrientationController.js" type="text/javascript"></script>
 
@@ -91,32 +91,32 @@
 
         var sides = [
           {
-            url: '../lib/textures/cube/Park2/posx.jpg',
+            url: './textures/cube/Park2/posx.jpg',
             position: [ -512, 0, 0 ],
             rotation: [ 0, Math.PI / 2, 0 ]
           },
           {
-            url: '../lib/textures/cube/Park2/negx.jpg',
+            url: './textures/cube/Park2/negx.jpg',
             position: [ 512, 0, 0 ],
             rotation: [ 0, -Math.PI / 2, 0 ]
           },
           {
-            url: '../lib/textures/cube/Park2/posy.jpg',
+            url: './textures/cube/Park2/posy.jpg',
             position: [ 0,  512, 0 ],
             rotation: [ Math.PI / 2, 0, Math.PI ]
           },
           {
-            url: '../lib/textures/cube/Park2/negy.jpg',
+            url: './textures/cube/Park2/negy.jpg',
             position: [ 0, -512, 0 ],
             rotation: [ - Math.PI / 2, 0, Math.PI ]
           },
           {
-            url: '../lib/textures/cube/Park2/posz.jpg',
+            url: './textures/cube/Park2/posz.jpg',
             position: [ 0, 0,  512 ],
             rotation: [ 0, Math.PI, 0 ]
           },
           {
-            url: '../lib/textures/cube/Park2/negz.jpg',
+            url: './textures/cube/Park2/negz.jpg',
             position: [ 0, 0, -512 ],
             rotation: [ 0, 0, 0 ]
           }
