Add github banner to vr_basic demo

--- a/examples/vr_basic.html
+++ b/examples/vr_basic.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -69,7 +69,7 @@
 
         scene = new THREE.Scene();
 
-        // Choose a random number between 2 and 3
+        // Choose a random integer from 2 to 3
         var id = Math.floor(Math.random() * (3 - 2 + 1)) + 2;
 
         var cube = generateCubeMap('Park' + id + 'Small');
@@ -85,6 +85,7 @@
 
         // Allow rotation matrix to quaternion switching for this demo
         var switchDeviceModelEl = document.querySelector('#controllertype');
+
         switchDeviceModelEl.addEventListener('click', function( event ) {
           event.preventDefault();
 
@@ -160,6 +161,7 @@
       function onWindowResize() {
 
         camera.aspect = window.innerWidth / window.innerHeight;
+
         camera.updateProjectionMatrix();
 
         renderer.setSize( window.innerWidth, window.innerHeight );
@@ -169,6 +171,7 @@
       function animate() {
 
         controls.update();
+
         renderer.render( scene, camera );
 
         requestAnimationFrame( animate );
@@ -179,5 +182,8 @@
       animate();
 
     </script>
+
+    <!-- Github Banner -->
+    <a href="https://github.com/richtr/threeVR"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
   </body>
 </html>
