--- a/examples/vr_basic.html
+++ b/examples/vr_basic.html
@@ -10,7 +10,6 @@
       body {
         background-color: #000000;
         margin: 0;
-        cursor: move;
         overflow: hidden;
       }
 
@@ -82,6 +81,19 @@
         // Initiate our deviceorientation-based controller (with manual drag move overrides)
         controls = new DeviceOrientationController( camera, renderer.domElement );
         controls.connect();
+
+        // Show some e.g. visual effects when the user interacts with the VR viewer
+        controls.addEventListener('userinteractionstart', function() {
+          renderer.domElement.style.cursor = 'move';
+        });
+        controls.addEventListener('userinteractionstop', function() {
+          renderer.domElement.style.cursor = 'default';
+        });
+
+        // TODO: Implement a compass calibration UI when required by the device
+        controls.addEventListener('compassneedscalibration', function() {
+          alert('Your compass needs calibrating. Wave your phone in a figure 8 motion then continue.');
+        });
 
         // Allow rotation matrix to quaternion switching for this demo
         var switchDeviceModelEl = document.querySelector('#controllertype');
