Fix incorrectly named DeviceOrientationController event listener

--- a/examples/vr_basic.html
+++ b/examples/vr_basic.html
@@ -86,7 +86,7 @@
         controls.addEventListener('userinteractionstart', function() {
           renderer.domElement.style.cursor = 'move';
         });
-        controls.addEventListener('userinteractionsend', function() {
+        controls.addEventListener('userinteractionend', function() {
           renderer.domElement.style.cursor = 'default';
         });
 
