Add device orientation emulator controls

--- a/examples/vr_basic.html
+++ b/examples/vr_basic.html
@@ -92,6 +92,9 @@
 
 		<script src="../js/DeviceOrientationController.js" type="text/javascript"></script>
 
+		<!-- DEVICEORIENTATION EMULATOR DETECTION + BOOTSTRAP -->
+		<script src="https://richtr.github.io/deviceorientationemulator/DeviceOrientationEmulator.js"></script>
+
 		<aside id="calibrate-compass-popup" class="popup">
 			<p>
 				<strong>Calibrate your compass</strong> by moving your device in a figure 8 motion as shown below.
