Update link to doe - the device orientation and screen orientation API emulator

--- a/examples/vr_basic.html
+++ b/examples/vr_basic.html
@@ -93,7 +93,7 @@
 		<script src="../js/DeviceOrientationController.js" type="text/javascript"></script>
 
 		<!-- DEVICEORIENTATION EMULATOR DETECTION + BOOTSTRAP -->
-		<script src="https://richtr.github.io/deviceorientationemulator/DeviceOrientationEmulator.js"></script>
+		<script src="https://richtr.github.io/doe/doe.js"></script>
 
 		<aside id="calibrate-compass-popup" class="popup">
 			<p>
